[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -74,6 +74,8 @@ XWiki.FeedEntryClass_url=URL
 XWiki.FeedEntryClass_xml=XML
 XWiki.GoogleAnalyticsCode_account=Compte
 XWiki.GoogleAnalyticsCode_method=M\u00E9thode de suivi (tracking)
+XWiki.GoogleAnalyticsCode_method_classic=Analytics Classic
+XWiki.GoogleAnalyticsCode_method_universal=Analytics Universel
 XWiki.JavaScriptExtension_cache=Mode de mise en cache
 XWiki.JavaScriptExtension_code=Code
 XWiki.JavaScriptExtension_name=Nom
@@ -1510,7 +1512,9 @@ extensions.info.globalNamespace=espace de noms global
 extensions.info.id=Id
 extensions.info.jobLog=Journal d'ex\u00E9cution
 extensions.info.jobLog.install=Journal d'installation
+extensions.info.jobLog.installplan=Journal d'installation
 extensions.info.jobLog.uninstall=Journal de d\u00E9sinstallation
+extensions.info.jobLog.uninstallplan=Journal de d\u00E9sinstallation
 extensions.info.license={0,choice,0\#Licence inconnue|0<License\:} 
 extensions.info.namespaces.global=Install\u00E9e sur tous les wikis de la ferme
 extensions.info.namespaces.list=Install\u00E9e sur les wikis suivants \:
@@ -3088,6 +3092,8 @@ xe.blog.code.comments=Commentaire(s)
 xe.blog.code.createdby=Cr\u00E9\u00E9 par
 xe.blog.code.deletepost=Supprimer cet article de blog
 xe.blog.code.description.category=Articles r\u00E9cents pour la cat\u00E9gorie {0}
+xe.blog.code.description.space=Derniers articles de blog pour l''espace {0}
+xe.blog.code.description.wiki=Derniers articles de blog pour le wiki
 xe.blog.code.editpost=\u00C9diter cet article de blog
 xe.blog.code.hid=Entr\u00E9e%20cach\u00E9e
 xe.blog.code.hidden=Cet article de blog est cach\u00E9.
