--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ru.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ru.properties
@@ -1630,7 +1630,7 @@ panels.applications.title=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438
 panels.documentInformation.defaultLanguage=\u042F\u0437\u044B\u043A \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E\:
 panels.documentInformation.editIncluded=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C {0}
 panels.documentInformation.hiddenDocument=\u0421\u043A\u0440\u044B\u0442\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
-panels.documentInformation.includesCount={0,choice,0\#No|1\#One|1<{0}} \u0432\u043A\u043B\u044E\u0447\u0435\u043D\u043E \u0432 {0,choice,0\#documents.|1\#document\:|1<documents\:}
+panels.documentInformation.includesCount={0,choice,0\#0|1\#1|1<{0}} \u0432\u043A\u043B\u044E\u0447\u0435\u043D\u043E \u0432 {0,choice,0\#\u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442.|1\#\u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\:|1<\u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\:}
 panels.documentInformation.includesMore={0} \u0432\u0441\u0442\u0440\u043E\u0435\u043D\u043D\u044B\u0445 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
 panels.documentInformation.includesOne={0} \u0432\u0441\u0442\u0440\u043E\u0435\u043D\u043D\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
 panels.documentInformation.parent=\u0420\u043E\u0434\u0438\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\:
