--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_zh.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_zh.properties
@@ -100,6 +100,14 @@ XWiki.SchedulerJobClass_jobName=\u4EFB\u52A1\u540D
 XWiki.SchedulerJobClass_script=\u4EFB\u52A1\u811A\u672C
 XWiki.SchedulerJobClass_status=\u72B6\u6001
 XWiki.SearchConfigClass_engine=\u7F3A\u7701\u7684\u641C\u7D22\u5F15\u64CE
+XWiki.SearchSuggestSourceClass_engine=\u5F15\u64CE
+XWiki.SearchSuggestSourceClass_highlight=\u9AD8\u4EAE
+XWiki.SearchSuggestSourceClass_highlight.hint=\u9AD8\u4EAE\u641C\u7D22\u5EFA\u8BAE\u7ED3\u679C\u4E2D\u7684\u641C\u7D22\u6587\u672C\u3002
+XWiki.SearchSuggestSourceClass_icon=\u56FE\u6807
+XWiki.SearchSuggestSourceClass_resultsNumber=\u754C\u9650
+XWiki.SearchSuggestSourceClass_resultsNumber.hint=\u4ECE\u8FD9\u4E2A\u6E90\u53EF\u4EE5\u83B7\u53D6\u5230\u7684\u6700\u5927\u7684\u641C\u7D22\u7ED3\u679C\u3002
+XWiki.SearchSuggestSourceClass_url=\u670D\u52A1
+XWiki.SearchSuggestSourceClass_url.hint=\u641C\u7D22\u5EFA\u8BAE\u670D\u52A1\u3002\u53EF\u4EE5\u662F\u4E00\u4E2A\u6587\u6863\u5F15\u7528\u6216\u8005\u662F\u4E00\u4E2A\u5916\u90E8URL
 XWiki.StyleSheetExtension_cache=\u7F13\u5B58\u7B56\u7565
 XWiki.StyleSheetExtension_code=\u4EE3\u7801
 XWiki.StyleSheetExtension_name=\u540D\u79F0
@@ -121,10 +129,15 @@ XWiki.WatchListClass_interval=\u90AE\u4EF6\u901A\u77E5\u95F4\u9694
 XWiki.WatchListClass_query=\u67E5\u8BE2\uFF08HQL\uFF09
 XWiki.WatchListClass_spaces=\u9017\u53F7\u5206\u9694\u7684\u7A7A\u95F4\u5217\u8868
 XWiki.WysiwygEditorConfigClass_attachmentSelectionLimited=\u9644\u4EF6\u9009\u62E9\u88AB\u9650\u5236
+XWiki.WysiwygEditorConfigClass_cleanPaste=\u81EA\u52A8\u6E05\u9664\u7C98\u8D34\u5185\u5BB9
 XWiki.WysiwygEditorConfigClass_colorPalette=\u8C03\u8272\u677F
 XWiki.WysiwygEditorConfigClass_colorsPerRow=\u6BCF\u884C\u7684\u989C\u8272
+XWiki.WysiwygEditorConfigClass_externalImages=\u5916\u90E8\u56FE\u7247
 XWiki.WysiwygEditorConfigClass_fontNames=\u5B57\u4F53\u540D\u79F0
 XWiki.WysiwygEditorConfigClass_fontSizes=\u5B57\u4F53\u5927\u5C0F
+XWiki.WysiwygEditorConfigClass_menuBar=\u83DC\u5355\u6761
+XWiki.WysiwygEditorConfigClass_plugins=\u63D2\u4EF6
+XWiki.WysiwygEditorConfigClass_toolBar=\u5DE5\u5177\u6761
 XWiki.XWikiComments_author=\u4F5C\u8005
 XWiki.XWikiComments_comment=\u8BC4\u8BBA
 XWiki.XWikiComments_date=\u65E5\u671F
@@ -138,6 +151,7 @@ XWiki.XWikiGroups_member=\u6210\u5458
 XWiki.XWikiPreferences_accessibility=\u542F\u7528\u66F4\u591A\u6613\u7528\u7279\u8272
 XWiki.XWikiPreferences_ad_clientid=\u5E7F\u544A\u5BA2\u6237ID
 XWiki.XWikiPreferences_admin_email=\u7BA1\u7406\u5458\u90AE\u7BB1
+XWiki.XWikiPreferences_admin_email.hint=\u7528\u4E8E\u53D1\u9001\u901A\u77E5\u7684\u9ED8\u8BA4\u90AE\u7BB1\u5730\u5740
 XWiki.XWikiPreferences_auth_active_check=\u4E3B\u52A8\u5F0F\u8BA4\u8BC1\u68C0\u67E5
 XWiki.XWikiPreferences_authenticate_edit=\u7F16\u8F91\u65F6\u8BA4\u8BC1\u68C0\u67E5
 XWiki.XWikiPreferences_authenticate_view=\u5DF2\u7ECF\u8BA4\u8BC1\u7684\u89C6\u56FE
@@ -148,17 +162,26 @@ XWiki.XWikiPreferences_comment_registered=\u5DF2\u6CE8\u518C
 XWiki.XWikiPreferences_confirmation_email_content=\u786E\u8BA4\u6DB5\u5185\u5BB9
 XWiki.XWikiPreferences_convertmail=\u8F6C\u6362\u90AE\u4EF6\u7C7B\u578B
 XWiki.XWikiPreferences_core.defaultDocumentSyntax=\u9ED8\u8BA4\u6587\u6863\u8BED\u6CD5
+XWiki.XWikiPreferences_dateformat=\u65E5\u671F\u683C\u5F0F
 XWiki.XWikiPreferences_default_language=\u9ED8\u8BA4\u8BED\u8A00
 XWiki.XWikiPreferences_documentBundles=\u56FD\u9645\u5316\u6587\u6863\u5305
 XWiki.XWikiPreferences_edit_anonymous=\u533F\u540D
 XWiki.XWikiPreferences_edit_registered=\u5DF2\u6CE8\u518C
 XWiki.XWikiPreferences_editbox_height=\u7F16\u8F91\u6846\u9AD8
 XWiki.XWikiPreferences_editbox_width=\u7F16\u8F91\u6846\u5BBD
+XWiki.XWikiPreferences_editcomment=\u5141\u8BB8\u7248\u672C\u6458\u8981
+XWiki.XWikiPreferences_editcomment_mandatory=\u5F3A\u5236\u751F\u6210\u7248\u672C\u6458\u8981
 XWiki.XWikiPreferences_editor=\u9ED8\u8BA4\u7F16\u8F91\u5668
 XWiki.XWikiPreferences_invitation_email_content=\u9080\u8BF7\u6DB5\u5185\u5BB9
 XWiki.XWikiPreferences_javamail_extra_props=\u5176\u4ED6JavaMail\u5C5E\u6027
 XWiki.XWikiPreferences_languages=\u652F\u6301\u7684\u8BED\u8A00
+XWiki.XWikiPreferences_ldap.hint=\u662F\u5426\u5141\u8BB8\u8BE5wiki\u4F7F\u7528LDAP\u8FDB\u884C\u8EAB\u4EFD\u8BA4\u8BC1\u3002\u5982\u679C\u5141\u8BB8\u5E76\u914D\u7F6E\u6B63\u786E\u7684\u8BDD\uFF0Cxwiki\u4F1A\u5728\u4E00\u4E2ALDAP\u7528\u6237\u5728\u7B2C\u4E00\u6B21\u8BBF\u95EE\u8BE5xiki\u7684\u65F6\u5019\u751F\u6210\u4E00\u4E2A\u672C\u5730\u7528\u6237\u3002
+XWiki.XWikiPreferences_ldap_UID_attr=Ldap UID\u5C5E\u6027\u540D
+XWiki.XWikiPreferences_ldap_port=Ldap\u670D\u52A1\u5668\u7AEF\u53E3\u53F7
+XWiki.XWikiPreferences_ldap_server=Ldap\u670D\u52A1\u5668\u5730\u5740
+XWiki.XWikiPreferences_ldap_trylocal=\u5C1D\u8BD5\u672C\u5730\u767B\u5F55
 XWiki.XWikiPreferences_leftPanels=\u663E\u793A\u5728\u5DE6\u4FA7\u7684\u9762\u677F
+XWiki.XWikiPreferences_leftPanelsWidth=\u5DE6\u9762\u677F\u680F\u5BBD\u5EA6
 XWiki.XWikiPreferences_macros_groovy=Groovy\u5B8F
 XWiki.XWikiPreferences_macros_languages=\u5B8F\u8BED\u8A00
 XWiki.XWikiPreferences_macros_mapping=\u5B8F\u6620\u5C04
@@ -167,6 +190,7 @@ XWiki.XWikiPreferences_macros_wiki=Wiki\u89E3\u6790\u5668\u5B8F
 XWiki.XWikiPreferences_macros_wiki2=\u65B0Wiki\u89E3\u6790\u5668\u5B8F
 XWiki.XWikiPreferences_menu=\u83DC\u5355
 XWiki.XWikiPreferences_meta=HTTP\u5143\u4FE1\u606F
+XWiki.XWikiPreferences_minoredit=\u5141\u8BB8\u6700\u5C0F\u7F16\u8F91
 XWiki.XWikiPreferences_multilingual=\u591A\u8BED\u8A00\u652F\u6301
 XWiki.XWikiPreferences_notification_pages=\u901A\u77E5\u9875
 XWiki.XWikiPreferences_pageWidth=\u63A8\u8350\u9875\u5BBD
@@ -178,10 +202,14 @@ XWiki.XWikiPreferences_renderXWikiGroovyRenderer=\u6E32\u67D3Groovy\u4EE3\u7801
 XWiki.XWikiPreferences_renderXWikiRadeoxRenderer=\u6E32\u67D3Wiki\u8BED\u6CD5
 XWiki.XWikiPreferences_renderXWikiVelocityRenderer=\u6E32\u67D3Velocity\u4EE3\u7801
 XWiki.XWikiPreferences_rightPanels=\u663E\u793A\u5728\u53F3\u4FA7\u7684\u9762\u677F
+XWiki.XWikiPreferences_rightPanelsWidth=\u53F3\u9762\u677F\u680F\u5BBD\u5EA6
 XWiki.XWikiPreferences_showLeftPanels=\u663E\u793A\u5DE6\u9762\u677F\u680F
 XWiki.XWikiPreferences_showRightPanels=\u663E\u793A\u53F3\u9762\u677F\u680F
+XWiki.XWikiPreferences_showannotations=\u663E\u793A\u6587\u6863\u6CE8\u91CA
+XWiki.XWikiPreferences_showattachments=\u663E\u793A\u6587\u6863\u9644\u4EF6
 XWiki.XWikiPreferences_showcomments=\u663E\u793A\u6587\u6863\u8BC4\u8BBA
 XWiki.XWikiPreferences_showhistory=\u663E\u793A\u6587\u6863\u5386\u53F2
+XWiki.XWikiPreferences_showinformation=\u663E\u793A\u6587\u6863\u4FE1\u606F
 XWiki.XWikiPreferences_skin=\u76AE\u80A4
 XWiki.XWikiPreferences_smtp_port=\u7AEF\u53E3
 XWiki.XWikiPreferences_smtp_server=\u670D\u52A1\u5668
@@ -191,6 +219,7 @@ XWiki.XWikiPreferences_stylesheet=\u6837\u5F0F\u8868
 XWiki.XWikiPreferences_stylesheets=\u6837\u5F0F\u8868
 XWiki.XWikiPreferences_tags=\u6FC0\u6D3B\u6807\u7B7E
 XWiki.XWikiPreferences_timezone=\u65F6\u533A
+XWiki.XWikiPreferences_timezone_default=\u7CFB\u7EDF\u9ED8\u8BA4
 XWiki.XWikiPreferences_title=\u6807\u9898
 XWiki.XWikiPreferences_upload_maxsize=\u6700\u5927\u4E0A\u4F20\u5927\u5C0F
 XWiki.XWikiPreferences_use_email_verification=\u4F7F\u7528\u90AE\u4EF6\u9A8C\u8BC1
@@ -215,6 +244,7 @@ XWiki.XWikiSkins_style.css=\u6837\u5F0F
 XWiki.XWikiSkins_view.vm=\u67E5\u770B
 XWiki.XWikiSkins_viewheader.vm=\u67E5\u770B\u9875\u5934
 XWiki.XWikiUsers_active=\u6FC0\u6D3B\u7684
+XWiki.XWikiUsers_address=\u5730\u5740
 XWiki.XWikiUsers_avatar=\u5934\u50CF
 XWiki.XWikiUsers_blog=\u535A\u5BA2
 XWiki.XWikiUsers_blogfeed=\u535A\u5BA2\u6E90
@@ -232,6 +262,7 @@ XWiki.XWikiUsers_imtype=\u5373\u65F6\u804A\u5929\u8F6F\u4EF6\u7C7B\u578B
 XWiki.XWikiUsers_last_name=\u59D3
 XWiki.XWikiUsers_pageWidth=\u63A8\u8350\u9875\u5BBD
 XWiki.XWikiUsers_password=\u5BC6\u7801
+XWiki.XWikiUsers_phone=\u7535\u8BDD
 XWiki.XWikiUsers_skin=\u76AE\u80A4
 XWiki.XWikiUsers_usertype=\u7528\u6237\u7C7B\u578B
 XWiki.XWikiUsers_usertype_Advanced=\u9AD8\u7EA7
@@ -240,6 +271,7 @@ XWiki.XWikiUsers_validkey=\u9A8C\u8BC1\u5BC6\u94A5
 accountdisabled=\u60A8\u7684\u8D26\u53F7\u88AB\u7981\u6B62\u4F7F\u7528\u3002\u5982\u679C\u60A8\u8BA4\u4E3A\u6709\u95EE\u9898\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458.
 accountnotactive=\u56E0\u4E3A\u90AE\u4EF6\u8FD8\u672A\u786E\u8BA4\uFF0C\u60A8\u7684\u8D26\u53F7\u672A\u6FC0\u6D3B.
 accountnotactive_email=\u60A8\u5E94\u8BE5\u5DF2\u6536\u5230\u4E00\u5C01\u90AE\u4EF6\uFF0C\u91CC\u9762\u6709\u786E\u8BA4\u94FE\u63A5\u3002\u6216\u8005\u4F60\u4E5F\u53EF\u4EE5\u628A\u90AE\u4EF6\u4E2D\u7684\u6FC0\u6D3B\u7801\u590D\u5236\u5230\u4E0B\u9762\u7684\u533A\u57DF\u4E2D\u3002
+action.addClassProperty.error.alreadyExists=\u5C5E\u6027{0}\u5DF2\u7ECF\u5B58\u5728
 action.addClassProperty.error.invalidName=\u5C5E\u6027\u540D\u79F0\u53EA\u80FD\u4F7F\u7528\u4E0B\u5217\u5B57\u7B26\uFF1A a-zA-Z0-9 \!
 actiondoesnotexist=\u4E0D\u652F\u6301\u8FD9\u6837\u7684\u64CD\u4F5C \!
 actions=\u64CD\u4F5C
@@ -862,7 +894,7 @@ core.viewers.comments.preview.button.back=\u8FD4\u56DE
 core.viewers.comments.preview.button.preview=\u4E0A\u4E00\u6761
 core.viewers.comments.preview.failed=\u751F\u6210\u9884\u89C8\u5931\u8D25\uFF1A
 core.viewers.comments.preview.inProgress=\u751F\u6210\u9884\u89C8\u2026\u2026
-core.viewers.comments.reply=\u6062\u590D
+core.viewers.comments.reply=\u56DE\u590D
 core.viewers.comments.title=\u8BC4\u8BBA\u5728<a href\="{1}">{0}</a>\u4E0A
 core.viewers.content.doesnotexists.edittocreate=\u4F60\u53EF\u4EE5 <a href\="{0}">\u7F16\u8F91\u8FD9\u4E2A\u9875\u9762</a> \u6765\u521B\u5EFA.
 core.viewers.diff.attachment.action=\u52A8\u4F5C
