[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -728,7 +728,7 @@ core.copy.title=Copier <a href\="{1}">{0}</a>
 core.create.ajax.error=Une erreur est survenue, merci de rafraichir la page et d'essayer \u00E0 nouveau
 core.create.newPageTitle=Cr\u00E9er la page {0}
 core.create.page=Nom de la page \:
-core.create.page.error.docalreadyexists=La page {0} existe d\u00E9j\u00E0. Merci de renseigner un autre nom de page.
+core.create.page.error.docalreadyexists=La page  <a href\="{1}">{0}</a> existe d\u00E9j\u00E0. Merci de renseigner un autre nom de page (ou <a href\="{2}">\u00E9diter {0}</a>).
 core.create.page.hint=Nom de la nouvelle page
 core.create.page.space.hint=Espace de la nouvelle page
 core.create.page.template.empty=Page Wiki vide
@@ -1623,6 +1623,10 @@ italics=Italique
 italicstext=Texte en Italique
 javaheapspace=Exception de d\u00E9passement de m\u00E9moire (Java Heap Space Out Of Memory Exception) \!
 javamail_extra_props=Propri\u00E9t\u00E9s additionnelles de JavaMail
+job.log.label.install=Journal d'installation
+job.log.label.installplan=Journal d'installation
+job.log.label.uninstall=Journal de d\u00E9sinstallation
+job.log.label.uninstallplan=Journal de d\u00E9sinstallation
 language=Langue
 languages=Langues
 lastauthor=Dernier Auteur
