[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_nl.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_nl.properties
@@ -72,6 +72,10 @@ XWiki.FeedEntryClass_tags=Tags
 XWiki.FeedEntryClass_title=Titel
 XWiki.FeedEntryClass_url=URL
 XWiki.FeedEntryClass_xml=XML
+XWiki.GoogleAnalyticsCode_account=Account
+XWiki.GoogleAnalyticsCode_method=Tracking-methode
+XWiki.GoogleAnalyticsCode_method_classic=Klassieke analytics
+XWiki.GoogleAnalyticsCode_method_universal=Universele analytics
 XWiki.JavaScriptExtension_cache=Caching beleid
 XWiki.JavaScriptExtension_code=Code
 XWiki.JavaScriptExtension_name=Naam
@@ -81,9 +85,15 @@ XWiki.Mail_html=HTML
 XWiki.Mail_language=Taal
 XWiki.Mail_subject=Onderwerp
 XWiki.Mail_text=Tekst
+XWiki.MessageStreamConfig_active=Berichtenstroom inschakelen
+XWiki.MessageStreamConfig_visibilityLevel_everyone=Iedereen
+XWiki.MessageStreamConfig_visibilityLevel_followers=Volgers
+XWiki.MessageStreamConfig_visibilityLevel_group=Groep
+XWiki.MessageStreamConfig_visibilityLevel_user=Gebruiker
 XWiki.Registration_defaultRedirect=Redirect hierheen na registratie
 XWiki.Registration_heading=Koptekst registratie pagina
 XWiki.Registration_liveValidation_defaultFieldOkMessage=Standaard veld okay boodschap
+XWiki.Registration_liveValidation_enabled=Javascript veldvalidatie inschakelen
 XWiki.Registration_loginButton_autoLogin_enabled=Automatisch inloggen inschakelen
 XWiki.Registration_loginButton_enabled=Login knop inschakelen
 XWiki.Registration_registrationSuccessMessage=Bericht bij geslaagde registratie
@@ -91,18 +101,58 @@ XWiki.Registration_requireCaptcha=Vereis CAPTCHA bij registratie
 XWiki.Registration_welcomeMessage=Welkom bericht
 XWiki.ResetPasswordRequestClass_verification=Aanvraag verificatie tekst
 XWiki.SchedulerJobClass_cron=Cron expressie
+XWiki.SchedulerJobClass_jobClass=Job-klasse
+XWiki.SchedulerJobClass_jobDescription=Job-omschrijving
+XWiki.SchedulerJobClass_jobName=Job-naam
+XWiki.SchedulerJobClass_script=Job-script
 XWiki.SchedulerJobClass_status=Status
 XWiki.SearchConfigClass_engine=Standaard zoekmachine
+XWiki.SearchSuggestConfig_activated=Geactiveerd
+XWiki.SearchSuggestSourceClass_activated=Geactiveerd
+XWiki.SearchSuggestSourceClass_activated.hint=Bepaalt of deze bron wel of niet wordt gebruikt (als de bron-zoekmachine hetzelfde is als de zoekmachine die door de huidige wiki wordt gebruikt).
+XWiki.SearchSuggestSourceClass_engine=Zoekmachine
+XWiki.SearchSuggestSourceClass_engine.hint=De zoekmachine die wordt gebruikt voor het ophalen van de resultaten. Deze bron wordt genegeerd als de huidige wiki een andere zoekmachine gebruikt.
+XWiki.SearchSuggestSourceClass_highlight=Markeer
+XWiki.SearchSuggestSourceClass_highlight.hint=Markeer de gezochte tekst in de zoekresultaten.
+XWiki.SearchSuggestSourceClass_icon=Pictogram
+XWiki.SearchSuggestSourceClass_icon.hint=Het pictogram waarmee de resultaten uit deze bron worden aangeduid. Bijv. icon\:user
+XWiki.SearchSuggestSourceClass_name=Naam
+XWiki.SearchSuggestSourceClass_name.hint=De naam die wordt gebruikt om resultaten uit deze bron te groeperen. Dit mag een vertaalsleutel zijn.
+XWiki.SearchSuggestSourceClass_query=Query
+XWiki.SearchSuggestSourceClass_query.hint=De query die wordt doorgegeven aan de zoekmachine. Deze moet een __INPUT__-placeholder hebben voor de gezochte tekst.
+XWiki.SearchSuggestSourceClass_resultsNumber=Limiet
+XWiki.SearchSuggestSourceClass_resultsNumber.hint=Het maximale aantal zoekresultaten uit deze bron.
+XWiki.SearchSuggestSourceClass_url=Service
+XWiki.SearchSuggestSourceClass_url.hint=De zoekservice. Dit kan een referentie zijn naar een document of een externe URL.
 XWiki.StyleSheetExtension_cache=Caching beleid
 XWiki.StyleSheetExtension_code=Code
 XWiki.StyleSheetExtension_name=Naam
+XWiki.StyleSheetExtension_parse=Verwerk inhoud
 XWiki.StyleSheetExtension_use=Gebruik deze extensie
 XWiki.TagClass_tags=Tags
+XWiki.TemplateProviderClass_action_edit=Wijzigen
+XWiki.TemplateProviderClass_action_saveandedit=Opslaan en wijzigen
+XWiki.TemplateProviderClass_type_page=Pagina
+XWiki.TemplateProviderClass_type_space=Homepage paginaruimte
 XWiki.WatchListClass_automaticwatch=Automatisch documenten volgen
+XWiki.WatchListClass_automaticwatch_ALL=Iedere wijziging
+XWiki.WatchListClass_automaticwatch_MAJOR=Grote wijzigingen
+XWiki.WatchListClass_automaticwatch_NEW=Nieuwe documenten
+XWiki.WatchListClass_automaticwatch_NONE=Uitgeschakeld
 XWiki.WatchListClass_automaticwatch_default=Standaard
 XWiki.WatchListClass_documents=Document lijst, gescheiden door comma's
 XWiki.WatchListClass_interval=Email notificatie interval
 XWiki.WatchListClass_query=Query (HQL)
+XWiki.WatchListClass_spaces=Lijst van paginaruimtes, gescheiden door komma's
+XWiki.WysiwygEditorConfigClass_attachmentSelectionLimited=Selectie van bijlagen beperkt
+XWiki.WysiwygEditorConfigClass_cleanPaste=Automatisch schoon plakken van inhoud
+XWiki.WysiwygEditorConfigClass_colorPalette=Kleurenpalet
+XWiki.WysiwygEditorConfigClass_colorsPerRow=Kleuren per rij
+XWiki.WysiwygEditorConfigClass_externalImages=Externe afbeeldingen
+XWiki.WysiwygEditorConfigClass_fontNames=Lettertypenamen
+XWiki.WysiwygEditorConfigClass_fontSizes=Lettertypegroottes
+XWiki.WysiwygEditorConfigClass_imageSelectionLimited=Selectie van afbeeldingen beperkt
+XWiki.WysiwygEditorConfigClass_menuBar=Menubalk
 XWiki.XWikiComments_author=Auteur
 XWiki.XWikiComments_comment=Commentaar
 XWiki.XWikiComments_date=Datum
@@ -199,8 +249,15 @@ actiondoesnotexist=Deze actie bestaat niet\!
 actions=Acties
 active_0=Inactief
 active_1=Actief
+activitystream.event.addAnnotation=Er is een annotatie geplaatst in document "{0}"
+activitystream.event.addAnnotation.rss.body=Er is een annotatie geplaatst in document "{0}"
+activitystream.event.addAnnotation.rss.title=Er is een annotatie geplaatst in document "{0}"
+activitystream.event.addAttachment=Bijlage "{1}" is toegevoegd aan document "{0}"
+activitystream.event.addAttachment.rss.body=Bijlage "{1}" is toegevoegd aan document "{0}"
 activitystream.event.addAttachment.rss.title=Bijlage "{1}" is toegevoegd aan document "{0}"
+activitystream.event.addComment=Er is een commentaar geplaatst bij document "{0}"
 activitystream.event.addComment.rss.body=Commentaar is toegevoegd aan het document "{0}"
+activitystream.event.addComment.rss.title=Er is een commentaar geplaatst bij document "{0}"
 activitystream.event.create=Het document "{0}" is gecreeerd
 activitystream.event.create.rss.body=Het document "{0}" is gecreeerd
 activitystream.event.create.rss.title=Het document "{0}" is gecreeerd
@@ -208,7 +265,9 @@ activitystream.event.delete=Het document "{0}" is verwijderd
 activitystream.event.delete.rss.body=Het document "{0}" is verwijderd
 activitystream.event.delete.rss.title=Het document "{0}" is verwijderd
 activitystream.event.deleteAnnotation=Een notitie is verwijderd van het document "{0}"
+activitystream.event.deleteAnnotation.rss.body=Er is een annotatie verwijderd uit document "{0}"
 activitystream.event.deleteAnnotation.rss.title=Een notitie is verwijderd van het document "{0}"
+activitystream.event.deleteAttachment=Bijlage "{1}" is verwijderd uit document "{0}"\t
 activitystream.event.deleteAttachment.rss.body=De bijlage "{1}" is verwijderd van document "{0}"
 activitystream.event.deleteAttachment.rss.title=De bijlage "{1}" is verwijderd van document "{0}"
 activitystream.event.deleteComment=Commentaar is verwijderd van document "{0}"
@@ -218,7 +277,14 @@ activitystream.event.update=Het document "{0}" is gewijzigd
 activitystream.event.update.rss.body=Het document "{0}" is gewijzigd
 activitystream.event.update.rss.title=Het document "{0}" is gewijzigd
 activitystream.event.updateAnnotation=Een notitie is aangepast in het document "{0}"
+activitystream.event.updateAnnotation.rss.body=Er is een annotatie gewijzigd in document "{0}"
 activitystream.event.updateAnnotation.rss.title=Een notitie is aangepast in het document "{0}"
+activitystream.event.updateAttachment=Bijlage "{1}" is gewijzigd in document "{0}"
+activitystream.event.updateAttachment.rss.body=Bijlage "{1}" is gewijzigd in document "{0}"
+activitystream.event.updateAttachment.rss.title=Bijlage "{1}" is gewijzigd in document "{0}"
+activitystream.event.updateComment=Er is een commentaar gewijzigd bij document "{0}"
+activitystream.event.updateComment.rss.body=Er is een commentaar gewijzigd bij document "{0}"
+activitystream.event.updateComment.rss.title=Er is een commentaar gewijzigd bij document "{0}"
 addattachment=Voeg een bijlage toe
 addcomment=Commentaar toevoegen
 addobject=Object toevoegen
@@ -228,6 +294,8 @@ addrightentry=Toevoegen Toegangsrechten regel
 addusertogroup=Een gebruiker toevoegen aan deze groep
 admin=Administratie
 admin.admin=Beheerder
+admin.adminappnotinstalled=De beheertoepassing is niet ge\u00EFnstalleerd. Sinds XWiki Enterprise 1.5 wordt de beheertoepassing gedistribueerd als een applicatie. U kunt deze download ven {0}.
+admin.analytics=Google Analytics\u2122
 admin.annotations=Notities
 admin.authentification=Authenticatie
 admin.customize=Aanpassen
@@ -647,7 +715,29 @@ creator=Eerste auteur
 currentobjects=Huidige Objecten
 currentproperties=Huidige Eigenschappen
 currentrights=Huidige Toegangsrechten
+dashboard.actions.add.button=Gadget toevoegen
+dashboard.actions.add.failed=Toevoegen Gadget mislukt
+dashboard.actions.add.loading=Gadget wordt toegevoegd...
+dashboard.actions.add.tooltip=Voeg een nieuwe gadget toe aan dit dashboard
+dashboard.actions.columns.add.button=Kolom toevoegen
+dashboard.actions.columns.add.tooltip=Voeg een nieuwe kolom toe aan het einde van dit dashboard
+dashboard.actions.edit.differentsource.information=U bewerkt een dashboard dat is gedefinieerd in een ander document,
+dashboard.actions.edit.differentsource.warning=. Uw wijzigingen zullen alle pagina's waarin deze dashboard-configuratie wordt gebruikt, be\u00EFnvloeden. Als u alleen deze pagina wilt wijzigen, wijzig dan deze pagina in WYSIWYG-modus en configureer de dashboard macro met een lege bron-parameter.
+dashboard.actions.edit.failed=Opslaan dashboard-configuratie mislukt\:
+dashboard.actions.save.loading=Dasboardwijzigingen worden opgeslagen...
+dashboard.gadget.actions.delete.confirm=Weet u zeker dat u deze gadget wilt verwijderen?
+dashboard.gadget.actions.delete.done=Gadget verwijderd
+dashboard.gadget.actions.delete.failed=Verwijderen gadget mislukt\:
+dashboard.gadget.actions.delete.inProgress=Gadget verwijderen...
+dashboard.gadget.actions.delete.tooltip=Verwijder deze gadget van het dashboard
+dashboard.gadget.actions.drop=U kunt gadgets hier laten vallen
+dashboard.gadget.actions.edit.error.notmacro=De parameters van deze gadget kunnen niet worden gewijzigd met deze visuele editor. Gebruik alstublieft de object editor om deze gadget te wijzigen.
+dashboard.gadget.actions.edit.error.notmacro.title=Wijzig gadget parameters
+dashboard.gadget.actions.edit.failed=Opslaan gadget-configuratie mislukt\:
+dashboard.gadget.actions.edit.loading=Gadget-configuratie wordt opgeslagen...
+dashboard.gadget.actions.edit.tooltip=Wijzig de parameters van deze gadget
 date=Datum
+dateformat=Datumformaat
 default=standaard
 default_language=Standaard Taal
 defaultlanguage=Standaard Taal
