--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
@@ -70,6 +70,8 @@ XWiki.FeedEntryClass_tags=Etichete
 XWiki.FeedEntryClass_title=Titlu
 XWiki.FeedEntryClass_url=URL
 XWiki.FeedEntryClass_xml=XML
+XWiki.GoogleAnalyticsCode_account=Cont
+XWiki.GoogleAnalyticsCode_method=Metod\u0103 de Urm\u0103rire
 XWiki.JavaScriptExtension_cache=Politic\u0103 cache
 XWiki.JavaScriptExtension_code=Cod
 XWiki.JavaScriptExtension_name=Nume
@@ -79,6 +81,12 @@ XWiki.Mail_html=HTML
 XWiki.Mail_language=Limb\u0103
 XWiki.Mail_subject=Subiect
 XWiki.Mail_text=Text
+XWiki.MessageStreamConfig_active=Activa\u021Bi fluxul de mesaje
+XWiki.MessageStreamConfig_visibilityLevel_everyone=Toat\u0103 lumea
+XWiki.MessageStreamConfig_visibilityLevel_followers=Persoane interesate
+XWiki.MessageStreamConfig_visibilityLevel_group=Grup
+XWiki.MessageStreamConfig_visibilityLevel_user=Utilizator
+XWiki.Registration_defaultRedirect=Redirec\u021Bionare aici dup\u0103 \u00EEnregistrare
 XWiki.Registration_liveValidation_enabled=Activa\u021Bi validarea c\u00E2mpurilor cu JavaScript
 XWiki.Registration_loginButton_autoLogin_enabled=Permite autentificarea automat\u0103
 XWiki.Registration_loginButton_enabled=Activa\u0163i butonul de login
@@ -93,16 +101,35 @@ XWiki.SchedulerJobClass_jobName=Nume activitate
 XWiki.SchedulerJobClass_script=Script activitate
 XWiki.SchedulerJobClass_status=Status
 XWiki.SearchConfigClass_engine=Motor de c\u0103utare prestabilit
+XWiki.SearchSuggestConfig_activated=Activat
+XWiki.SearchSuggestSourceClass_activated=Activat
+XWiki.SearchSuggestSourceClass_engine=Motor
+XWiki.SearchSuggestSourceClass_highlight=Eviden\u021Bia\u021Bi
+XWiki.SearchSuggestSourceClass_name=Nume
+XWiki.SearchSuggestSourceClass_query=Interogare
+XWiki.SearchSuggestSourceClass_resultsNumber=Limit\u0103
+XWiki.SearchSuggestSourceClass_url=Serviciu
 XWiki.StyleSheetExtension_cache=Politic\u0103 cache
 XWiki.StyleSheetExtension_code=Cod
 XWiki.StyleSheetExtension_name=Nume
 XWiki.StyleSheetExtension_parse=Parseaz\u0103 con\u021Binutul
 XWiki.StyleSheetExtension_use=Folose\u0219te aceast\u0103 extensie
 XWiki.TagClass_tags=Etichete
+XWiki.TemplateProviderClass_action_edit=Editeaz\u0103
+XWiki.TemplateProviderClass_action_saveandedit=Salveaz\u0103 \u0219i Editeaz\u0103
+XWiki.TemplateProviderClass_type_page=Pagina
+XWiki.WatchListClass_automaticwatch_ALL=Orice modificare
+XWiki.WatchListClass_automaticwatch_MAJOR=Modific\u0103ri majore
+XWiki.WatchListClass_automaticwatch_NEW=Documente noi
+XWiki.WatchListClass_automaticwatch_NONE=Dezactivat
+XWiki.WatchListClass_automaticwatch_default=Default
 XWiki.WatchListClass_documents=List\u0103 de documente, separate prin virgul\u0103
 XWiki.WatchListClass_interval=Interval de notific\u0103ri e-mail
 XWiki.WatchListClass_query=Interogare (HQL)
 XWiki.WatchListClass_spaces=List\u0103 de spa\u021Bii, separate prin virgul\u0103
+XWiki.WysiwygEditorConfigClass_colorPalette=Palet\u0103 de culori
+XWiki.WysiwygEditorConfigClass_colorsPerRow=Culori pe r\u00E2nd
+XWiki.WysiwygEditorConfigClass_externalImages=Imagini externe
 XWiki.XWikiComments_author=Autor
 XWiki.XWikiComments_comment=Comentariu
 XWiki.XWikiComments_date=Data
@@ -126,6 +153,7 @@ XWiki.XWikiPreferences_comment_registered=\u00CEnregistrat
 XWiki.XWikiPreferences_confirmation_email_content=Con\u021Binut e-mail de confirmare
 XWiki.XWikiPreferences_convertmail=transform\u0103 tipul e-mail-ului
 XWiki.XWikiPreferences_core.defaultDocumentSyntax=Sintax\u0103 implicit\u0103
+XWiki.XWikiPreferences_dateformat=Formata dat\u0103
 XWiki.XWikiPreferences_default_language=Limb\u0103 implicit\u0103
 XWiki.XWikiPreferences_documentBundles=Fi\u0219ier de interna\u021Bionalizare a documentelor
 XWiki.XWikiPreferences_edit_anonymous=Anonim
@@ -136,6 +164,8 @@ XWiki.XWikiPreferences_editor=Editorul Implicit
 XWiki.XWikiPreferences_invitation_email_content=Con\u021Binutul invita\u021Biei
 XWiki.XWikiPreferences_javamail_extra_props=Alte propriet\u0103\u021Bi JavaMail
 XWiki.XWikiPreferences_languages=Limbi disponibile
+XWiki.XWikiPreferences_ldap_mode_group_sync_always=La fiecare autentificare a unui utilizator
+XWiki.XWikiPreferences_ldap_mode_group_sync_create=La crearea unui utilizator
 XWiki.XWikiPreferences_leftPanels=Panouri st\u00E2nga
 XWiki.XWikiPreferences_macros_groovy=Macro-uri pentru limbajul Groovy
 XWiki.XWikiPreferences_macros_languages=Limbaje macro-uri
@@ -777,6 +807,15 @@ core.widgets.confirmationBox.defaultQuestion=Sunte\u021Bi sigur?
 core.widgets.confirmationBox.notification.done=Ac\u021Biune terminat\u0103\!
 core.widgets.confirmationBox.notification.failed=Ac\u021Biunea a e\u0219uat\:
 core.widgets.confirmationBox.notification.inProgress=Se trimite cererea ...
+core.widgets.html5upload.status.finished=Ata\u0219ament \u00EEnc\u0103rcat\: {0} ({1})
+core.widgets.suggest.hide=ascunde sugestiile
+core.widgets.suggest.noResults=F\u0103r\u0103 rezultate\!
+core.widgets.suggest.showResults=Mergi la pagina de c\u0103utare...
+core.widgets.suggest.valuePrefix=Valoare\:
+core.widgets.suggestPicker.delete.tooltip=\u0218terge acest element din lista elementelor selectate
+core.widgets.suggestPicker.deleteAll=\u0218terge selectie
+core.widgets.suggestPicker.deleteAll.tooltip=\u0218terge lista elementelor selectate
+core.widgets.userPicker.noResults=Utilizatorul nu a fost g\u0103sit
 country=\u021Aar\u0103
 create=Creeaz\u0103
 createblogpost=Postare
@@ -789,6 +828,8 @@ creator=Creator
 currentobjects=Obiecte curente
 currentproperties=Propriet\u0103\u021Bi curente
 currentrights=Drepturi de acces curente
+dashboard.actions.columns.add.button=Adaug\u0103 coloana
+dashboard.actions.columns.add.tooltip=Adaug\u0103 o nou\u0103 coloan\u0103 in acest panou, la sf\u00E2r\u0219it
 date=Data
 dateformat=Formatul datei
 default=implicit
@@ -886,6 +927,14 @@ export_description=Descriere
 export_licence=Licen\u021B\u0103
 export_packagename=Numele pachetului
 export_version=Versiune
+extensions.actions.back=\u00CEnapoi la list\u0103
+extensions.actions.continue=Continu\u0103
+extensions.actions.diff=Arat\u0103 modific\u0103rile
+extensions.actions.hideDetails=Ascunde detaliile
+extensions.actions.install=Instaleaz\u0103
+extensions.actions.repairXAR=Repar\u0103
+extensions.actions.showDetails=Arat\u0103 detaliile
+extensions.actions.uninstall=Dezinstaleaz\u0103
 filename=Nume fi\u0219ier
 fileuploadislarge=XWiki are o limit\u0103 de 10MB pentru fi\u0219ierele ata\u0219ate. Aceast\u0103 limit\u0103 poate fi modificat\u0103 prin intermediul parametrului <tt>upload_maxsize</tt>. Consulta\u0163i FAQ (\u00EEntreb\u0103ri frecvente) pentru mai multe informa\u0163ii.
 firstname=Prenume
