--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/distribution/extension.defaultui.wiki
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/distribution/extension.defaultui.wiki
@@ -1,4 +1,4 @@
-##source.syntax=xwiki/2.1
+##!source.syntax=xwiki/2.1
 {{template name="extension.vm" output="false"/}}
 
 {{template name="distribution/macros.vm" output="false"/}}
