[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -27,7 +27,7 @@ Invitation.InvitationMailClass_messageBody=Contenu du message
 Invitation.InvitationMailClass_messageBodyPlain=Format texte brut du message pour les clients email non HTML
 Invitation.InvitationMailClass_messageGroupID=Identifiant du groupe de messages
 Invitation.InvitationMailClass_messageID=Identifiant du message email
-Invitation.InvitationMailClass_recipient=L'addresse email \u00E0 laquelle ce massage a \u00E9t\u00E9 envoy\u00E9
+Invitation.InvitationMailClass_recipient=Adresse email \u00E0 laquelle ce message a \u00E9t\u00E9 envoy\u00E9
 Invitation.InvitationMailClass_sendingUser=L'utilisateur qui a envoy\u00E9 le message
 Invitation.InvitationMailClass_sentDate=Date d'envoi du message
 Invitation.InvitationMailClass_status=Num\u00E9ro indiquant le statut du message
