--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
@@ -1289,7 +1289,7 @@ core.widgets.confirmationBox.notification.done=Pabeigts\!
 core.widgets.confirmationBox.notification.failed=Neizdev\u0101s\:
 core.widgets.confirmationBox.notification.inProgress=Nos\u016Btu piepras\u012Bjumu...
 core.widgets.gallery.currentImage=Teko\u0161ais att\u0113ls
-core.widgets.gallery.maximize=Maksimizz\u0113t
+core.widgets.gallery.maximize=Maksimiz\u0113t
 core.widgets.gallery.minimize=Minimiz\u0113t
 core.widgets.gallery.nextImage=R\u0101d\u012Bt n\u0101kamo att\u0113lu
 core.widgets.gallery.previousImage=R\u0101d\u012Bt iepriek\u0161\u0113jo att\u0113lu
