[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -27,7 +27,7 @@ Invitation.InvitationMailClass_messageBody=Contenu du message
 Invitation.InvitationMailClass_messageBodyPlain=Format texte brut du message pour les clients email non HTML
 Invitation.InvitationMailClass_messageGroupID=Identifiant du groupe de messages
 Invitation.InvitationMailClass_messageID=Identifiant du message email
-Invitation.InvitationMailClass_recipient=L'addresse email \u00E0 laquelle ce massage a \u00E9t\u00E9 envoy\u00E9
+Invitation.InvitationMailClass_recipient=Adresse email \u00E0 laquelle ce message a \u00E9t\u00E9 envoy\u00E9
 Invitation.InvitationMailClass_sendingUser=L'utilisateur qui a envoy\u00E9 le message
 Invitation.InvitationMailClass_sentDate=Date d'envoi du message
 Invitation.InvitationMailClass_status=Num\u00E9ro indiquant le statut du message
@@ -383,7 +383,9 @@ admin.colortheme=Th\u00E8me de couleur
 admin.colortheme.manage=G\u00E9rer les th\u00E8mes de couleur
 admin.colortheme.wikiSetting=Le th\u00E8me de couleur configur\u00E9 au niveau du wiki est {0}.
 admin.colorthemes=Th\u00E8mes de Couleur
+admin.colorthemes.colibrithemes=Th\u00E8mes Colibri
 admin.colorthemes.description=R\u00E9glages pour la personnalisation des th\u00E8mes de couleur
+admin.colorthemes.flamingothemes=Th\u00E8mes Flamingo
 admin.configuration=Configuration
 admin.configuration.description=Configuration g\u00E9n\u00E9rale du wiki
 admin.content=Contenu
@@ -416,6 +418,7 @@ admin.groups=Groupes
 admin.groups.description=G\u00E9rez les groupes d'utilisateurs\: ajouter, supprimer ou \u00E9diter les membres des groupes.
 admin.header=Ent\u00EAte de page
 admin.hidesections=Masquer les sections disponibles
+admin.icontheme=Th\u00E8me des ic\u00F4nes
 admin.import=Import
 admin.import.description=Importez des pages ou des applications dans le wiki
 admin.invitation=Application d'Invitation
@@ -728,7 +731,7 @@ core.copy.title=Copier <a href\="{1}">{0}</a>
 core.create.ajax.error=Une erreur est survenue, merci de rafraichir la page et d'essayer \u00E0 nouveau
 core.create.newPageTitle=Cr\u00E9er la page {0}
 core.create.page=Nom de la page \:
-core.create.page.error.docalreadyexists=La page {0} existe d\u00E9j\u00E0. Merci de renseigner un autre nom de page.
+core.create.page.error.docalreadyexists=La page  <a href\="{1}">{0}</a> existe d\u00E9j\u00E0. Merci de renseigner un autre nom de page (ou <a href\="{2}">\u00E9diter {0}</a>).
 core.create.page.hint=Nom de la nouvelle page
 core.create.page.space.hint=Espace de la nouvelle page
 core.create.page.template.empty=Page Wiki vide
@@ -840,7 +843,7 @@ core.editors.object.newObjectForClass=Nouvel objet {0}
 core.editors.object.newObjectForClass.tooltip=Nouvel objet {0}
 core.editors.object.noObject=L'objet sp\u00E9cifi\u00E9 n'existe pas
 core.editors.object.objectsForClass=Objets de type {0}
-core.editors.object.removeDeprecatedProperties.all.info=Certains objects de cette page ont des propri\u00E9t\u00E9s obsol\u00E8tes ayant \u00E9t\u00E9 supprim\u00E9es de leur classe respective
+core.editors.object.removeDeprecatedProperties.all.info=Certains objets de cette page ont des propri\u00E9t\u00E9s obsol\u00E8tes ayant \u00E9t\u00E9 supprim\u00E9es de leur classes respectives
 core.editors.object.removeDeprecatedProperties.all.link=Supprimer toutes les propri\u00E9t\u00E9s obsol\u00E8tes
 core.editors.object.removeDeprecatedProperties.all.link.tooltip=Supprimer toutes les propri\u00E9t\u00E9s obsol\u00E8tes
 core.editors.object.removeDeprecatedProperties.done=Propri\u00E9t\u00E9s obsol\u00E8tes supprim\u00E9es
@@ -860,6 +863,7 @@ core.editors.saveandcontinue.notification.error=Impossible d''enregistrer le doc
 core.editors.saveandcontinue.notification.inprogress=Enregistrement...
 core.editors.saveandcontinue.theDocumentWasNotSaved=Le document n'a pas \u00E9t\u00E9 enregistr\u00E9 \!
 core.editors.validation.mandatoryField=Ce champ est obligatoire
+core.export.formatUnknown=Le serveur Office n'est pas d\u00E9marr\u00E9 ou ce format d'export n'est pas support\u00E9.
 core.export.pdf.options.comments=Commentaires
 core.export.pdf.options.comments.hint=Imprime les commentaires \u00E0 la fin du PDF, avant les images en pi\u00E8ce jointe.
 core.export.pdf.options.cover=Couverture
@@ -1291,6 +1295,7 @@ core.viewers.share.target.ccMe=M'envoyer une copie
 core.viewers.share.target.hint=Utilisateur XWiki ou adresse email
 core.viewers.share.title=Partager <a href\="{1}">{0}</a> par email
 core.widgets.ajaxRequest.error.noServer=Le serveur ne r\u00E9pond pas
+core.widgets.confirmationBox.button.cancel=Annuler
 core.widgets.confirmationBox.button.no=Non
 core.widgets.confirmationBox.button.yes=Oui
 core.widgets.confirmationBox.defaultQuestion=Confirmer
@@ -1559,6 +1564,7 @@ extensions.search.submit=Rechercher
 extensions.search.tip=Rechercher une extension...
 extensions.uninstall.actions.cancel=Annuler
 extensions.uninstall.actions.submit=Valider
+extensions.uninstall.cleanPages.hint=Les pages suivantes ne sont plus n\u00E9cessaires, vous pouvez donc les supprimer. Si vous souhaitez absolument les conserver d\u00E9cochez les.\nLes pages wiki modifi\u00E9es sont d\u00E9coch\u00E9es par d\u00E9faut afin de ne pas perdre vos modifications. Si vos changements ne sont pas importants, vous pouvez les cocher pour suppression.
 extensions.uninstall.cleanPages.label=Supprimer les pages wiki inutilis\u00E9es ?
 extensions.uninstall.cleanPages.selectedCount={0} / {1} documents s\u00E9lectionn\u00E9s
 extensions.uninstall.error.notInstalled=Cette extension n'existe pas
@@ -1567,6 +1573,7 @@ extensions.uninstall.error.uninstallFailure=\u00C9chec de la d\u00E9sinstallatio
 extensions.uninstall.list=Les extensions suivantes seront supprim\u00E9es \:
 extensions.uninstall.title=D\u00E9sinstaller {0}
 extensions.upgrade.mergeConflict.autoResolve=R\u00E9soudre automatiquement
+extensions.upgrade.mergeConflict.autoResolve.hint=R\u00E9soudre automatiquement tous les conflits en appliquant la version du document courant.
 extensions.upgrade.mergeConflict.changes.original=Comparer
 extensions.upgrade.mergeConflict.changes.revised=avec
 extensions.upgrade.mergeConflict.changes.title=Modifications pour le document {0}
@@ -1623,6 +1630,10 @@ italics=Italique
 italicstext=Texte en Italique
 javaheapspace=Exception de d\u00E9passement de m\u00E9moire (Java Heap Space Out Of Memory Exception) \!
 javamail_extra_props=Propri\u00E9t\u00E9s additionnelles de JavaMail
+job.log.label.install=Journal d'installation
+job.log.label.installplan=Journal d'installation
+job.log.label.uninstall=Journal de d\u00E9sinstallation
+job.log.label.uninstallplan=Journal de d\u00E9sinstallation
 language=Langue
 languages=Langues
 lastauthor=Dernier Auteur
@@ -1818,6 +1829,10 @@ platform.appwithinminutes.classEditorUpdateTranslationsHint=Mettre \u00E0 jour l
 platform.appwithinminutes.classEditorUpdateTranslationsLabel=Mettre \u00E0 jour le paquet de traduction de la classe
 platform.appwithinminutes.classEditorUsersFieldName=Utilisateur
 platform.appwithinminutes.createAppButtonLabel=Cr\u00E9er une application
+platform.appwithinminutes.deleteAppConfirmation=L''application {0} et TOUS SES DOCUMENTS vont \u00EAtre d\u00E9truits. Etes-vous certain de vouloir continuer ?
+platform.appwithinminutes.deleteAppDoesNotExistError=L'application indiqu\u00E9e n'existe pas.
+platform.appwithinminutes.deleteAppEntriesConfirmation=TOUS LES DOCUMENTS de l''application {0} vont \u00EAtre d\u00E9truits. Etes-vous certain de vouloir continuer ?
+platform.appwithinminutes.deleteAppNotSpecifiedError=Aucun nom d'application n'a \u00E9t\u00E9 indiqu\u00E9.
 platform.appwithinminutes.description=Cr\u00E9ez des applications web puissantes en quelques minutes.
 platform.appwithinminutes.grantSpaceAdminRightsSaveComment=Donner des droits d'administration sur l'espace
 platform.appwithinminutes.homePageTitle=App Within Minutes
@@ -2189,6 +2204,9 @@ platform.web.editors.rights.pageTitle=Modification des droits pour {0}
 platform.web.editors.unknown.pageTitle=Modification de {0}
 platform.web.editors.wiki.pageTitle=Modification de {0} (mode wiki)
 platform.web.editors.wysiwyg.pageTitle=Modification de {0}
+platform.web.init.message.intializationFailure=\u00C9chec lors du d\u00E9marrage de XWiki
+platform.web.init.message.intializationSuccess=XWiki est en cours de d\u00E9marrage. Vous allez bient\u00F4t \u00EAtre redirig\u00E9s.
+platform.web.init.message.intializing=D\u00E9marrage de XWiki ({0}%)...
 plugin.tag.editcomment.added=Le tag [{0}] a \u00E9t\u00E9 ajout\u00E9
 plugin.tag.editcomment.removed=Le tag [{0}] a \u00E9t\u00E9 supprim\u00E9
 plugin.tag.editcomment.renamed=Le tag [{0}] a \u00E9t\u00E9 renomm\u00E9 en [{1}]
@@ -3115,6 +3133,7 @@ xe.blog.code.previousweek=Semaine pr\u00E9c\u00E9dente
 xe.blog.code.published=Cet article de blog n'a pas encore \u00E9t\u00E9 publi\u00E9.
 xe.blog.code.readpost=Lire l'article complet
 xe.blog.code.sheetexplanation=Cette sheet doit \u00EAtre utilis\u00E9e afin d'afficher un article de blog.
+xe.blog.code.title=Blog
 xe.blog.manage.blogtitle=Titre du Billet
 xe.blog.manage.blogtype=Type de blog \:
 xe.blog.manage.create=Cr\u00E9er
@@ -3481,7 +3500,7 @@ xe.panels.classedit.youare=Vous \u00EAtes en train d'\u00E9diter
 xe.panels.create=Cr\u00E9er un nouveau panneau
 xe.panels.create.panel=Cr\u00E9er un nouvau panel\:
 xe.panels.create.title=Titre du panel
-xe.panels.customize=Vous pouvez customiser les colonnes lat\u00E9rales en utilisant le
+xe.panels.customize=Vous pouvez personnaliser les colonnes lat\u00E9rales en utilisant l'
 xe.panels.document.information=Informations sur le document
 xe.panels.edit=(Modifier ce panel)
 xe.panels.editor=Panels d'\u00E9dition
@@ -3741,7 +3760,7 @@ xe.statistics.homepage=page d'accueil des statistiques
 xe.statistics.inthe=dans le
 xe.statistics.module.activating=En activant le module de statistiques vous pourrez avoir acc\u00E8s aux informations suivantes\:
 xe.statistics.module.disabled=Le module de statistiques est d\u00E9sactiv\u00E9 par d\u00E9faut afin d'am\u00E9liorer les performances du wiki.
-xe.statistics.module.muchmore=et bien plus\!
+xe.statistics.module.muchmore=et plus encore \!
 xe.statistics.module.settingvalue=Il peut \u00EAtre activ\u00E9 pour tout le wiki en changeant la valeur de
 xe.statistics.more=Pour plus de statistiques, veuillez consulter \:
 xe.statistics.moredetails=fichier de configuration. Pour plus de d\u00E9tails, voir
