--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
@@ -1289,7 +1289,7 @@ core.widgets.confirmationBox.notification.done=Pabeigts\!
 core.widgets.confirmationBox.notification.failed=Neizdev\u0101s\:
 core.widgets.confirmationBox.notification.inProgress=Nos\u016Btu piepras\u012Bjumu...
 core.widgets.gallery.currentImage=Teko\u0161ais att\u0113ls
-core.widgets.gallery.maximize=Maksimizz\u0113t
+core.widgets.gallery.maximize=Maksimiz\u0113t
 core.widgets.gallery.minimize=Minimiz\u0113t
 core.widgets.gallery.nextImage=R\u0101d\u012Bt n\u0101kamo att\u0113lu
 core.widgets.gallery.previousImage=R\u0101d\u012Bt iepriek\u0161\u0113jo att\u0113lu
@@ -3476,7 +3476,7 @@ xe.panels.quicklinks.blog=Emu\u0101ri
 xe.panels.quicklinks.dashboard=Kontrolpanelis
 xe.panels.quicklinks.index=Dokumentu saraksts
 xe.panels.quicklinks.sandbox=Smil\u0161kaste
-xe.panels.quicklinks.userdirectory=Lietot\u0101ja katalogs
+xe.panels.quicklinks.userdirectory=Lietot\u0101ju katalogs
 xe.panels.rights.accesslevels=Pieejas l\u012Bme\u0146i
 xe.panels.rights.accesslevelsexplanation=\u0160aj\u0101 lauk\u0101 j\u0101nor\u0101da izv\u0113l\u0113to lietot\u0101ju un grupu pieejas l\u012Bme\u0146i. Ir iesp\u0113jama\: administr\u0113\u0161ana, programm\u0113\u0161ana, re\u0123istr\u0113\u0161an\u0101s, redi\u0123\u0113\u0161ana, skat\u012B\u0161an\u0101s, koment\u0113\u0161ana. Lai uzst\u0101d\u012Btu viki ties\u012Bbas skat\u012B\u0161an\u0101s un redi\u0123\u0113\u0161anas re\u017E\u012Bmos, izmantojiet "skat\u012Bt, redi\u0123\u0113t". Lai uzst\u0101d\u012Btu koment\u0113\u0161anu, izmantojiet "koment\u0113\u0161ana".
 xe.panels.rights.allowdeny=At\u013Caut/aizliegt
@@ -3823,7 +3823,7 @@ xe.userdirectory.customizeSelectedColumnsHint=Ar atstarp\u0113m vai rindu p\u010
 xe.userdirectory.customizeSelectedColumnsLabel=Izv\u0113l\u0113t\u0101s kolonnas
 xe.userdirectory.doc.fullName=Lietot\u0101ja ID
 xe.userdirectory.isCustomizedWarning=J\u016Bs apl\u016Bkojat piel\u0101gotu lietot\u0101ja mapi. J\u016Bs varat [[atstat\u012Bt uz noklus\u0113to>>{0}||queryString\="{1}"]] vai [[piel\u0101got>>{2}||queryString\="{3}"]] to v\u0113l vair\u0101k.
-xe.userdirectory.title=Lietot\u0101ja katalogs
+xe.userdirectory.title=Lietot\u0101ju katalogs
 xe.webdav.error=Vai\! Kaut kas nog\u0101ja greizi... L\u016Bdzu m\u0113\u0123iniet atkal.
 xe.webdav.info=\u0160\u012B lapa ir priek\u0161 webdav saist\u012Bt\u0101m funkcij\u0101m
 xe.webdav.initialize.activex=Neizdev\u0101s inicializ\u0113t piepras\u012Bto ActiveX objektu
