[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -936,6 +936,9 @@ core.menu.export.odt=Exporter en ODT
 core.menu.export.pdf=Exporter en PDF
 core.menu.export.rtf=Exporter en RTF
 core.menu.export.xar=Exporter en XAR
+core.menu.goto.page=Aller \u00E0 la Page
+core.menu.goto.space=Aller \u00E0 l'Espace
+core.menu.goto.wiki=Aller au Wiki
 core.menu.main.title=Actions g\u00E9n\u00E9rales \:
 core.menu.moreactions=Plus d'actions
 core.menu.network=R\u00E9seau
@@ -1076,6 +1079,7 @@ core.versions.delete.goback=Retour
 core.versions.delete.many=Supprimer les versions
 core.versions.delete.needselect=Vous devez pr\u00E9ciser de quelle version \u00E0 quelle version supprimer
 core.versions.delete.single=Supprimer
+core.viewers.annotations.title=Annotations sur {0}
 core.viewers.attachments.author=Post\u00E9 par {0}
 core.viewers.attachments.date=le {0}
 core.viewers.attachments.delete=Supprimer
@@ -1524,6 +1528,7 @@ extensions.info.license={0,choice,0\#Licence inconnue|0<License\:}
 extensions.info.namespaces.global=Install\u00E9e sur tous les wikis de la ferme
 extensions.info.namespaces.list=Install\u00E9e sur les wikis suivants \:
 extensions.info.repository=R\u00E9pertoire
+extensions.info.scm=Sources
 extensions.info.stableVersions.label=Versions stables
 extensions.info.stableVersions.linkLabel=Liste des versions stables
 extensions.info.stableVersions.noResults=Aucune version stable disponible.
@@ -2784,9 +2789,9 @@ watchlist.notification.email.contents=Table des mati\u00E8res
 watchlist.notification.email.greeting=Bonjour {0},
 watchlist.notification.email.multipleUpdates.intro=Ce message est envoy\u00E9 par XWiki. Voici la liste de vos documents favoris ayant \u00E9t\u00E9 modifi\u00E9s depuis la derni\u00E8re notification \:
 watchlist.notification.email.multipleUpdates.subject=Notification XWiki - {0} documents ont \u00E9t\u00E9 modifi\u00E9s depuis {1}
-watchlist.notification.email.singleUpdate.intro=Ce message est envoy\u00E9 par XWiki. Un document favori a \u00E9t\u00E9 modifi\u00E9 depuis la derni\u00E8re notification \:
+watchlist.notification.email.singleUpdate.intro=Ce message est envoy\u00E9 par XWiki. Ce document de votre liste de favoris a \u00E9t\u00E9 modifi\u00E9 depuis la derni\u00E8re notification \:
 watchlist.notification.email.singleUpdate.subject=Notification XWiki - 1 document a \u00E9t\u00E9 modifi\u00E9 depuis {0}
-watchlist.notification.email.subject=Modifications dans XWiki,\n{0,choice,0\#No|1\#One|1<{0}} le document{0,choice,0\#s|1\#|2\#s} ha{0,choice,0\#ve|1\#s|1<ve} a \u00E9t\u00E9 modifi\u00E9 depuis {1}
+watchlist.notification.email.subject=Modifications dans XWiki, {0,choice,0\#aucun|1\#un|1<{0}} document{0,choice,0\#|1\#|2\#s} {0,choice,0\#n |1\#a|1<ont} \u00E9t\u00E9 modifi\u00E9{0,choice,0\#|1\#|1<s} depuis {1}
 watchlist.page=Page
 watchlist.pages=Pages
 watchlist.pages.info=Pages auxquelles vous vous int\u00E9ressez \:
