--- a/xwiki-platform-core/xwiki-platform-skin/xwiki-platform-skin-skinx/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-skin/xwiki-platform-skin-skinx/src/main/resources/ApplicationResources_fr.properties
@@ -1,4 +1,11 @@
 ## XWiki Translation for language fr generated from http://www.l10n.xwiki.org
+XWiki.JavaScriptExtension_cache_default=Par d\u00E9faut
+XWiki.JavaScriptExtension_cache_forbid=Pas de mise en cache
+XWiki.JavaScriptExtension_cache_long=Long
+XWiki.JavaScriptExtension_cache_short=Court
+XWiki.JavaScriptExtension_use_always=Sur ce wiki
+XWiki.JavaScriptExtension_use_currentPage=Sur cette page ou \u00E0 la demande
+XWiki.JavaScriptExtension_use_onDemand=Uniquement \u00E0 la demande
 XWiki.StyleSheetExtension_cache_default=D\u00E9faut
 XWiki.StyleSheetExtension_cache_forbid=Pas de cache
 XWiki.StyleSheetExtension_cache_long=Long
